Bug 61529 - Migration to Java 9 Add Java 9 options to avoid the warnings that will disturb our users. Warnings are due to: - https://github.com/bulenkov/Darcula/issues/41 - https://issues.apache.org/jira/browse/GROOVY-8339 Bugzilla Id: 61529
git-svn-id: https://svn.apache.org/repos/asf/jmeter/trunk@1822712 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: e7c4ab3a1e3b66d4a454c33a4bad0b8f1c6b3546